kubernetes/apps/database/crunchy-postgres-operator/pgadmin/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
  namespace: database
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.ewatkins.dev"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: pgAdmin
    gethomepage.dev/description: psql management
    gethomepage.dev/group: infra
    gethomepage.dev/icon: sh-pgadmin.svg
    gethomepage.dev/pod-selector: >-
      app in (
        pgadmin
      )
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "pgadmin.ewatkins.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=31449600; includeSubDomains"
      backendRefs:
        - name: pgadmin
          port: 5050
